# ipcamera

./: CMakeLists.txt  README.md
cmake/: FindDlib.cmake
src/: CMakeLists.txt  camera.cpp  video_to_image.cpp
